--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Bug Tracker</h1>
+    <h1>Updated Bug Tracker</h1>
     <form id="bugForm">
       <input type="text" id="title" placeholder="Bug title" required />
       <textarea id="description" placeholder="Bug description" required></textarea>
