--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
   <div class="container">
     <h1>New Bug Tracker with new features</h1>
+    <h1>New Bug Tracker with new features</h1>
     <h1>Updated Bug Tracker</h1>
     <form id="bugForm">
       <input type="text" id="title" placeholder="Bug title" required />
       <textarea id="description" placeholder="Bug description" required></textarea>
+      <button type="submit">Add Bug</button>
       <button type="submit">Add Bug</button>
     </form>
     <ul id="bugList"></ul>
